fixed button on mobile

--- a/src/pages/sectionOne/index.css
+++ b/src/pages/sectionOne/index.css
@@ -484,7 +484,7 @@ nav .login {
   .main h1 {
     font-size: 32px;
     margin-bottom: 0.5rem;
-    line-height: 52px;
+    line-height: 42px;
   }
   .main .buttons-container a {
     font-size: 14px;
